# RoutesLabel

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README-FIRST.txt  README.md
assets/: routes_demo.json
assets/cases/: car-marker-fork-detour.json  dense-trunk-perf-scene.json  diagonal-three-routes.json  dual-fork-top3-assign.json  horizontal-trunk-vertical-legs.json  l-fork-three-branches.json  l-turn-parallel-offset.json  parallel-horizontal-lanes.json  three-routes-detour-same-od.json  trunk-fork-rejoin-crowding.json  vertical-staggered-corridor.json  wide-separated-vertical-lanes.json
cmake/: CompileShaders.cmake
shaders/: grid_clip.comp  grid_common.glsl  grid_label.comp  grid_pca.comp  grid_scan.comp  grid_score.comp  routes.frag  routes.vert  triangle.vert
src/: main.cpp
src/algo/: GridCommon.h  GridCpu.cpp  GridCpu.h  GridGpu.cpp  GridGpu.h
src/app/: Application.cpp  Application.h
src/core/: Types.h
src/debug/: DebugOverlay.cpp  DebugOverlay.h  FpsWidget.cpp  FpsWidget.h  GridDebugWidget.cpp  GridDebugWidget.h  IDebugWidget.h  LabelWidget.cpp  LabelWidget.h
src/platform/: Window.cpp  Window.h
src/renderer/: MapView.cpp  MapView.h  RouteScene.cpp  RouteScene.h  RoutesRenderer.cpp  RoutesRenderer.h  TriangleRenderer.cpp  TriangleRenderer.h
src/rhi/: Buffer.cpp  Buffer.h  CommandPool.cpp  CommandPool.h  ComputePipeline.cpp  ComputePipeline.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  FrameSync.cpp  FrameSync.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderPass.cpp  RenderPass.h  ShaderModule.cpp  ShaderModule.h  Swapchain.cpp  Swapchain.h  VulkanCommon.cpp  VulkanCommon.h
src/tools/: RunCases.cpp
src/utils/: FileSystem.cpp  FileSystem.h  Json.cpp  Json.h  Log.cpp  Log.h  SceneAlgo.cpp  SceneAlgo.h
tools/: run-all-cases-visual.sh  run-case-visual.sh  run-cases.sh  run-linux.sh  run-mac.sh  run.sh  validate-case-od.py
